unpackaged/objects/wb_Vehicle__c.object
<CustomObject>
    <description>WellBe Car Master for Insurances</description>
    <fields>
        <fullName>EngineNumber__c</fullName>
        <label>エンジン番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrameNo__c</fullName>
        <label>車台番号</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalNumberofSeats__c</fullName>
        <label>法定座席数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>車型</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>所有区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>所有</fullName>
                </value>
                <value>
                    <fullName>レンタル</fullName>
                    <label>リース／レンタル</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>利用会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>車両</relationshipLabel>
        <relationshipName>UsingCar</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>車両</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>登録番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>